Remove mentions of Downlord from the client

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -601,7 +601,7 @@ settings.language=Language
 settings.notifications.toastPreview=Preview
 settings.notifications.toastPreview.title=Toast Preview
 settings.notifications.toastPreview.text = This is how it looks like.
-settings.language.helpUs.text = Downlord's FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
+settings.language.helpUs.text = The FAF Client's localization is a community effort. If you want to see the client translated into another language we'd love your help.
 settings.language.helpUs.button = Help us translate
 settings.chat.chatFormat = Chat Format
 settings.chat.chatFormat.extended = Extended
