Use placementGames from season

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1002,7 +1002,7 @@ leaderboard.score = Score
 leaderboard.rank = Rank \#{0,number,#} out of {1,number,#} players
 leaderboard.totalPlayers = {0,number,#} players
 leaderboard.divisionName = {0} {1}
-leaderboard.placement = The System is still learning you. You have played {0} games
+leaderboard.placement = The System is still learning you. {0} out of {1} games played.
 leaderboard.noEntry = Play matchmaker games to get assigned to a division
 leagues.divisionName.1 = Bronze
 leagues.divisionName.2 = Silver
