--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -998,10 +998,10 @@ teammatchmaking.queueTitle.inGame = Can't join queues while you are in a game
 teammatchmaking.queueTitle.memberInGame = Can't join queues while someone is in a game
 teammatchmaking.queueTitle.inParty = The party leader will join the queues
 teammatchmaking.queueTitle.inQueue = Your party is now in queue
-teammatchmaking.queue.ladder1v1 = 1v1 Queue
-teammatchmaking.queue.tmm2v2 = 2v2 Queue
-teammatchmaking.queue.tmm4v4Casual = 4v4 Casual
-teammatchmaking.queue.tmm4v4Competitive = 4v4 Competitive
+teammatchmaking.queue.ladder1v1 = 1v1
+teammatchmaking.queue.tmm2v2 = 2v2
+teammatchmaking.queue.tmm4v4FullShare = 4v4 Full Share
+teammatchmaking.queue.tmm4v4ShareUntilDeath = 4v4 No Share
 chat.groupChat.playerDisconnect = {0} has disconnected
 chat.groupChat.playerConnect = {0} has connected
 game.generateMap.mexSlider = Mexes
