Add error messages to map and mod reading

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -282,10 +282,13 @@ modVault.upload.uploading = Uploading mod…
 modVault.upload.complete = Upload complete
 modVault.upload.failed = Mod upload failed. Server gave the following errors\:\n\n{0}
 modVault.upload.retry = Retry
+modVault.upload.readError = An error occurred while reading the mod
+modVault.upload.reading = Reading mod…
 modVault.upload.compressing = Compressing mod…
 mapVault.upload.title = Upload map
 mapVault.upload.hint = Values were read from *_scenario.lua
 mapVault.upload.mapVersion = Version
+mapVault.upload.readError = An error occurred while reading the map
 mapVault.upload.reading = Reading map…
 mapVault.upload = Upload map…
 mapVault.upload.uploadNow = Upload now
@@ -293,7 +296,7 @@ mapVault.upload.uploading = Uploading map…
 mapVault.upload.compressing = Compressing map…
 mapVault.upload.complete = Upload complete
 mapVault.upload.complete.hint = WARNING\: Since the server may have renamed your files, it's strongly recommended that you remove your map from the map folder and instead install it using the map vault.
-mapVault.upload.failed = Map could not be uploaded. Server gave the following errors\:\n\n{0}
+mapVault.upload.failed = Map upload failed. Server gave the following errors\:\n\n{0}
 mapVault.upload.mapSize = Size
 mapVault.upload.players = Players
 mapVault.upload.chooseDirectory = Choose map directory
