Add ability to close matchmaker games when match is cancelled

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1028,7 +1028,7 @@ teammatchmaking.chat.topic = Find teammates and get gameplay advice on our offic
 getHelp = Get Help
 copyError = Copy Error
 findHelp = If this error continues use the Get Help button to open the help forum. Make sure to check the FAQ and previous topics. If you make a new topic please include your logs which can be opened from the menu in the top left of the client.
-game.crash = It looks like Supreme Commander\: Forged Alliance crashed check the game log {0} for more information
+game.crash = It looks like Supreme Commander\: Forged Alliance crashed check with exit code {0} the game log {1} for more information
 replayNotAvailable = Replay {0,number,#} is not yet available from the server. Please try again later.
 close = Close
 userMenu.moderationReport = Moderation reports
@@ -1083,3 +1083,5 @@ reasonUnknown = Reason unknown
 temporalRange = From {0} until {1}
 offline.noExe = Game was not found in the FAF Data directory. In order to play offline you must login at least once and download the necessary FAF files.
 offline.error = There was an error trying to launch the game
+matchmaker.cancelled = Matchmaker match cancelled by server due to lack of response from other players
+matchmaker.cancelled.title = Matchmaker game cancelled
