--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -39,6 +39,8 @@ play.coop = Co-Op
 leaderboard.failedToLoad = Leaderboard could not be loaded
 leaderboard.loading = Loading leaderboard…
 leaderboard.noLeaderboards = There seem to be no leaderboards available
+leaderboard.failedToLoadDivisions = Division list could not be loaded
+leaderboard.failedToLoadEntry = Your own entry could not be loaded
 coop.host.title = Host this Mission
 coop.host.button = Host Game
 coop.leaderboard = Leaderboard
@@ -997,7 +999,7 @@ leaderboard.season.2v2League.season.1 = 2v2 Season 1
 leaderboard.season.1v1League.season.2 = 1v1 Season 2
 leaderboard.season.2v2League.season.2 = 2v2 Season 2
 leaderboard.seasonDate = {0} – {1}
-leaderboard.searchPrompt = Search player or rank
+leaderboard.searchPrompt = Search player
 leaderboard.score = Score
 leaderboard.rank = Rank \#{0,number,#} out of {1,number,#} players
 leaderboard.totalPlayers = {0,number,#} players
