Add retry to 503 api status and map errors properly (#2385)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -805,7 +805,8 @@ theme.needsRestart.quit = Quit
 vault.loading = Loading...
 vault.displayQuery = Display search query
 vault.queryPrompt = Build a query above or enter one manually
-vault.searchError = An error has occurred while searching.
+vault.searchError = An error has occurred while searching
+vault.badSearch = The search contained an invalid parameter in the query.\nError is: {0}\nQuery is: {1}
 vault.upload = Upload…
 replay.team = Team {0}
 replay.noTeam = No Teams
