custom lobby notifications

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -450,6 +450,20 @@ settings.notifications.toastScreen = Screen
 settings.notifications.playSound = Play sound
 settings.notifications.pmReceived = PM received
 settings.notifications.ranked1v1 = Ranked 1v1 available
+settings.notifications.interestingLobbies = Enable Interesting Lobbies
+settings.notifications.interestingLobbiesDescription = Notifies you about any lobbies that satisfy the following conditions:
+settings.notifications.interestingLobbiesIncludeMapNames = Include map names
+settings.notifications.interestingLobbiesIncludeMapNamesDescription = Notifies you if the map name contains any of the following words (seperated by comma, white space / lettercase ignored)
+settings.notifications.interestingLobbiesExcludeMapNames = Exclude map names
+settings.notifications.interestingLobbiesExcludeMapNamesDescription = Will not notify you if the lobby name contains any of the following words (seperated by comma, white space / lettercase ignored)
+settings.notifications.interestingLobbiesAverageRating = Average rating range
+settings.notifications.interestingLobbiesAverageRatingDescription = Notifies you if the average rating of the lobby falls within the chosen range
+settings.notifications.interestingLobbiesPercentFilled = Minimal fill
+settings.notifications.interestingLobbiesPercentFilledDescription = Notifies you when the lobby is filled to at least this percentage
+settings.notifications.interestingLobbiesNotifyTime = Notify timeout
+settings.notifications.interestingLobbiesNotifyTimeDescription = The time in minutes that must pass before you can be re-notified of the same lobby (0 = never)
+game.interestingLobbies.notificationTitle = Interesting Lobby Found
+game.interestingLobbies.notificationDescription = {0} hosted by {1} | {2} average rating with {3}/{4} players | Click to join as well.
 settings.sounds = Sounds
 settings.sounds.enable = Enable Sounds
 settings.fa.title = Forged Alliance Forever
