--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1019,6 +1019,8 @@ replay.inParty = Replay could not be started because you are in a party. Leave t
 leaderboard.tmm_2v2.name = 2v2
 leaderboard.ladder_1v1.name = 1v1
 leaderboard.global.name = Global
+leaderboard.tmm_4v4_full_share.name = 4v4 Full Share
+leaderboard.tmm_4v4_share_until_death.name = 4v4 No Share
 leaderboard.gamesPlayed = {0} Games Played\: {1,number,#}
 leaderboard.rating = {0} Rating
 leaderboard.displayName = Leaderboard
