Change 4v4 queue names

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1001,8 +1001,8 @@ teammatchmaking.queueTitle.inParty = The party leader will join the queues
 teammatchmaking.queueTitle.inQueue = Your party is now in queue
 teammatchmaking.queue.ladder1v1 = 1v1
 teammatchmaking.queue.tmm2v2 = 2v2
-teammatchmaking.queue.tmm4v4FullShare = 4v4 Full Share
-teammatchmaking.queue.tmm4v4ShareUntilDeath = 4v4 No Share
+teammatchmaking.queue.tmm4v4_full_share = 4v4 Full Share
+teammatchmaking.queue.tmm4v4_share_until_death = 4v4 No Share
 chat.groupChat.playerDisconnect = {0} has disconnected
 chat.groupChat.playerConnect = {0} has connected
 game.generateMap.mexSlider = Mexes
