Add detection of non ascii title

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -160,6 +160,7 @@ game.create.searchMap = Search…
 game.create.gameType = Game type
 game.create.mods = Mods
 game.create.titleMissing = Title is missing
+game.create.titleNotAscii = Title must contain only ascii characters
 game.create.featuredModMissing = Game type is missing
 game.create.failed=Game could not be created.
 game.create.errorUpdatingMods=Could not update selected mods. This might be due to file permission errors. Also not selecting the mod on game creation will make this error disappear.
