Update messages_cat.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cat.properties
+++ b/src/main/resources/i18n/messages_cat.properties
@@ -296,6 +296,7 @@ mapVault.upload.uploading = Pujant mapa...
 mapVault.upload.compressing = Comprimint mapa...
 mapVault.upload.complete = Pujada completada
 mapVault.upload.complete.hint = ADVERTÈNCIA\: Com que pot ser que el servidor hagi canviat el nom dels teus fitxers, és molt recomanable que esborris el teu mapa de la carpeta de mapes i que l'instal·lis utilitzant el dipòsit de mapes.
+# Fuzzy
 mapVault.upload.failed = El mapa no s''ha pogut pujar. El servidor ha donat els següents errors\:\n\n{0}
 mapVault.upload.mapSize = Mida
 mapVault.upload.players = Jugadors
@@ -606,6 +607,7 @@ settings.language = Idioma
 settings.notifications.toastPreview = Previsualització
 settings.notifications.toastPreview.title = Previsualització de notificacions
 settings.notifications.toastPreview.text = Es veurà així
+# Fuzzy
 settings.language.helpUs.text = La localització del client de Downlord és un esforç comunitari. Si vols veure el client traduït a un altre idioma ens encantaria tenir el teu ajut.
 settings.language.helpUs.button = Ajuda'ns a traduïr
 settings.chat.chatFormat = Format de xat
@@ -779,6 +781,7 @@ startTab.configure = Configura
 vault.replays.onlyShowLastYear = Només de l'any passat
 # Fuzzy
 game.create.spawnCount = Nombre d'aparicions
+# Fuzzy
 game.create.mapSize = Mida del mapa
 game.generate = Genera un nou mapa
 game.generate.recreate = Regenera el mapa utilitzant el següent nom de mapa\:
@@ -811,6 +814,7 @@ theme.needsRestart.quit = Surt
 vault.loading = Carregant...
 vault.displayQuery = Mostra la consulta de cerca
 vault.queryPrompt = Construeix una consulta a sobre o insereix-ne una manualment
+# Fuzzy
 vault.searchError = Ha ocorregut un error mentre es cercava.
 vault.upload = Puja...
 replay.team = Equip {0}
