Update messages_cs.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -301,6 +301,7 @@ mapVault.upload.uploading = Nahrávání mapy...
 mapVault.upload.compressing = Komprimování mapy...
 mapVault.upload.complete = Nahrávání dokončeno
 mapVault.upload.complete.hint = VAROVÁNÍ\: Vzhledem k tomu, že server mohl přejmenovat některé soubory mapy, doporučuje se odebrat mapu ze složky s mapy a místo toho nainstalovat nově nahranou verzi z Vaultu.
+# Fuzzy
 mapVault.upload.failed = Mapa nelze nahrát. Chyba ze server\:\n\n{0}
 mapVault.upload.mapSize = Velikost
 mapVault.upload.players = Hráči
@@ -622,6 +623,7 @@ settings.language = Jazyk
 settings.notifications.toastPreview = Náhled
 settings.notifications.toastPreview.title = Ukázka upozornení
 settings.notifications.toastPreview.text = Takto to vypadá.
+# Fuzzy
 settings.language.helpUs.text = Překlad Downlordova FAF klienta je komunitní záležitost. Pokud ho chceš mít přeložený do jiného jazyka, uvítáme Tvou pomoc.
 settings.language.helpUs.button = Pomoz nám s překladem
 # Fuzzy
