Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -303,6 +303,7 @@ mapVault.upload.uploading = Map uploaden...
 mapVault.upload.compressing = Comprimeer map..
 mapVault.upload.complete = Upload compleet
 mapVault.upload.complete.hint = WAARSCHUWING\: Omdat de server jouw bestanden misschien heeft herbenoemd, is het zeer aanbevolen dat je jouw map verwijderd van de algemene map en in plaats daarvan installeert van de map opslag.
+# Fuzzy
 mapVault.upload.failed = Map kon niet geladen worden. De server gaf de volgende fouten\:\n\n{0}
 mapVault.upload.mapSize = Grootte
 mapVault.upload.players = Spelers
@@ -624,6 +625,7 @@ settings.language = Taal
 settings.notifications.toastPreview = Voorbeeld
 settings.notifications.toastPreview.title = Voorbeeld titel
 settings.notifications.toastPreview.text = Dit is hoe het er uit ziet.
+# Fuzzy
 settings.language.helpUs.text = Downlord's FAF Client's localisatie is een gemeenschapsinspanning. Als je de client in een andere taal vertaald wilt zien waarderen we jouw help.
 settings.language.helpUs.button = Help ons vertalen
 # Fuzzy
@@ -807,6 +809,7 @@ startTab.configure = Configureer
 vault.replays.onlyShowLastYear = Alleen van het laatste jaar
 # Fuzzy
 game.create.spawnCount = Hoeveelheid spawns
+# Fuzzy
 game.create.mapSize = Map grootte
 game.generate = Maak een nieuwe map
 game.generate.recreate = Maak een map opnieuw met het gebruik van de volgende map naam
@@ -839,6 +842,7 @@ theme.needsRestart.quit = Verlaat
 vault.loading = Laden...
 vault.displayQuery = Toon de zoekopdracht.
 vault.queryPrompt = Maak een zoekopdracht aan of voer een opdracht zelf in
+# Fuzzy
 vault.searchError = Een probleem heeft zich voorgedaan tijdens het zoeken.
 vault.upload = Uploaden...
 replay.team = Team {0}
@@ -1005,7 +1009,9 @@ teammatchmaking.notification.inviteAlreadyInQueue.message = Verlaat alstublieft 
 teammatchmaking.notification.joinAlreadyInQueue.title = Je bent al in een wachtrij
 teammatchmaking.notification.gameAlreadyRunning.title = Al in het spel
 teammatchmaking.partyTitle = Jou spel\:
+# Fuzzy
 teammatchmaking.queue.ladder1v1 = 1v1 wachtrij
+# Fuzzy
 teammatchmaking.queue.tmm2v2 = 2v2 wachtrij
 chat.groupChat.playerDisconnect = {0} heeft de verbinding verbroken
 chat.groupChat.playerConnect = {0} heeft verbinding gemaakt
