Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -139,7 +139,7 @@ clan.leader = Chef
 clan.clanMembers = Membres
 clan.messageLeader = Contacter le chef du clan
 clan.visitPage = Visiter le site web du clan
-chat.privateMessage.playerLeft = {0} est déconnecté
+chat.privateMessage.playerLeft = {0} est hors ligne
 chat.privateMessage.playerReconnect = {0} est connecté de nouveau
 chat.privateMessage.globalRating = Niveau global
 chat.privateMessage.ladder1v1Rating = Niveau 1c1
@@ -283,7 +283,7 @@ modVault.loadingMods = Chargement des mods…
 modVault.upload.chooseDirectory = Sélectionner le répertoire du mod
 modVault.upload = Envoyer un mod…
 modVault.upload.title = Envoyer un mod
-modVault.upload.hint = Les valeurs sont obtenues depuis "mod_info.lua"
+modVault.upload.hint = Les valeurs sont obtenues depuis mod_info.lua
 modVault.upload.modVersion = Version
 modVault.upload.modUid = UID
 modVault.upload.uploadNow = Envoyer
@@ -293,15 +293,16 @@ modVault.upload.failed = Impossible d''envoyer le mod. Le serveur a renvoyé l''
 modVault.upload.retry = Réessayer
 modVault.upload.compressing = Compression du mod…
 mapVault.upload.title = Envoyer une carte
-mapVault.upload.hint = Les valeurs sont obtenues depuis " *_scenario.lua "
+mapVault.upload.hint = Les valeurs sont obtenues depuis *_scenario.lua
 mapVault.upload.mapVersion = Version
-mapVault.upload.reading = Vérification de la carte...
-mapVault.upload = Envoyer la carte...
+mapVault.upload.reading = Vérification de la carte…
+mapVault.upload = Envoyer la carte…
 mapVault.upload.uploadNow = Envoyer
-mapVault.upload.uploading = Envoi de la carte...
-mapVault.upload.compressing = Compression de la carte...
+mapVault.upload.uploading = Envoi de la carte…
+mapVault.upload.compressing = Compression de la carte…
 mapVault.upload.complete = Envoi terminé
 mapVault.upload.complete.hint = AVERTISSEMENT \: Le serveur ayant renommé les fichiers, il vous est fortement recommandé de supprimer votre carte de votre dossier "maps" et de l'installer à nouveau depuis le Vault.
+# Fuzzy
 mapVault.upload.failed = Impossible d''envoyer la carte. Le serveur a renvoyé l''erreur suivante \:\n\n{0}
 mapVault.upload.mapSize = Taille
 mapVault.upload.players = Joueurs
@@ -311,7 +312,7 @@ mapVault.upload.sizeFormat = {0,number,#}km x {1,number,#}km
 mapVault.upload.playersFormat = {0,number,#}
 mapVault.upload.rankedConfirm = Je confirme que cette carte est correctement équilibrée et ne contient aucun code prohibé. Je suis conscient que violer ces règles entrainera un bannissement. Décocher cette case rend la carte non classée.
 mapVault.upload.retry = Réessayer
-mapVault.loadingMaps = Chargement des cartes...
+mapVault.loadingMaps = Chargement des cartes…
 mapVault.mostLikedMaps = Meilleures notes
 mapVault.newestMaps = Plus récentes
 mapVault.mostPlayed = Plus jouées
@@ -340,9 +341,9 @@ map.updatedDateTime = Mise à jour
 mapPreview.name = Nom \: {0}
 mapPreview.size = {0,number,#}km x {1,number,#}km
 mapPreview.loadFailure.message = Impossible de charger la prévisualisation.
-replays.loadingOnlineTask.title = Chargement des rediffusions en ligne...
+replays.loadingOnlineTask.title = Chargement des rediffusions en ligne…
 replays.loadingOnlineTask.failed = Impossible de charger les rediffusions en ligne.
-replays.loadingLocalTask.title = Chargement des rediffusions locales...
+replays.loadingLocalTask.title = Chargement des rediffusions locales…
 replays.loadingLocalTask.failed = Impossible de charger les rediffusions locales.
 replays.live.loadFailure.title = Impossible de charger les parties en cours.
 replays.live.loadFailure.message = Impossible de démarrer la partie en cours.
@@ -350,7 +351,7 @@ tutorial.map = Carte
 tutorial.title = Titre
 tutorial.length = Durée
 tutorial.description = Description
-chat.connecting.message = Connexion au chat...
+chat.connecting.message = Connexion au chat…
 updater.binary.taskTitle = Préparation des fichiers du jeu
 clientUpdateAvailable.notification = La version {0} du client est disponible ({1})
 clientUpdateAvailable.downloadAndInstall = Télécharger
@@ -365,7 +366,7 @@ mapReplayTask.title = Téléchargement de la rediffusion {0}
 downloadingModTask.downloading = Téléchargement du mod {0}
 downloadingModTask.unzipping = Décompression du mod vers {0}
 missingGamePath.notification = Impossible de localiser le répertoire du jeu.
-missingGamePath.locate = Parcourir...
+missingGamePath.locate = Parcourir…
 missingGamePath.chooserTitle = Sélectionnez le répertoire "Supreme Commander Forged Alliance"
 notifications.empty = Aucune nouvelle notification
 stats.air = Air
@@ -398,7 +399,7 @@ user.status.waiting = Attend \: {0}
 user.status.playing = Joue \: {0}
 achievement.stepsFormat = {0,number,#}/{1,number,#}
 achievements.mostRecent = Plus récents
-achievements.loading = Chargement des succès...
+achievements.loading = Chargement des succès…
 achievements.unlocked = Déverrouillés ({0,number,#})
 # what does "open" mean in this context ?
 achievements.locked = Verrouillés ({0,number,#})
@@ -469,7 +470,7 @@ settings.fa.executableDecorator = Options de ligne de commande
 settings.fa.executionDirectory = Répertoire d'exécution
 settings.fa.advanced = Avancé
 settings.fa.useDefault = Utiliser le répertoire par défaut
-settings.fa.chooseDirectory = Parcourir...
+settings.fa.chooseDirectory = Parcourir…
 settings.general.theme = Thème
 settings.notifications.friendOnline = Ami connecté
 settings.notifications.friendJoinsGame = Ami rejoint une partie
@@ -484,7 +485,7 @@ settings.account.newPassword = Nouveau mot de passe
 settings.account.newPassword.empty = Le nouveau mot de passe ne peut pas être vide.
 settings.account.confirmPassword = Confirmer le mot de passe
 settings.account.confirmPassword.mismatch = Confirmation différente du nouveau mot de passe.
-settings.account.changePassword.changing = Modification du mot de passe...
+settings.account.changePassword.changing = Modification du mot de passe…
 settings.account.changePassword.success = Mot de passe mis à jour.
 settings.account.changePassword.error = Impossible de mettre à jour le mot de passe. ({0})
 settings.account.steamAccount = Lien avec le compte Steam
@@ -496,7 +497,7 @@ urlPreviewDescription = {0} ({1})
 achievement.unlockedTitle = Succès déverrouillé \!
 friend.nowOnlineNotification.title = {0} est connecté
 friend.nowOnlineNotification.action = Démarrer une conversation
-friend.nowOfflineNotification.title = {0} est déconnecté
+friend.nowOfflineNotification.title = {0} est hors ligne
 friend.joinedGameNotification.title = {0} a rejoint {1}
 friend.joinedGameNotification.action = Rejoindre la même partie
 query.equals = est
@@ -545,7 +546,7 @@ updater.downloadingFile = Téléchargement {0}
 updater.patchingFile = Mise à jour {0}
 serInfo.statistics.errorLoading = Impossible de charger les statistiques.
 userInfo.achievements.errorLoading = Impossible de charger les succès.
-userInfo.achievements.errorLDisplaying = Impossible d'afficher les succès.
+userInfo.achievements.errorLDisplaying = Impossible d'afficher les succès
 userInfo.nameHistory = Alias
 userInfo.nameHistory.date = Date de modification
 userInfo.nameHistory.noHistory = Cet utilisateur n'a pas d'alias
@@ -613,6 +614,7 @@ settings.language = Langue
 settings.notifications.toastPreview = Tester
 settings.notifications.toastPreview.title = Test de notification
 settings.notifications.toastPreview.text = Voilà le résultat.
+# Fuzzy
 settings.language.helpUs.text = Le client FAF de Downlord est un projet communautaire. Si vous souhaitez contribuer à la traduction du client, n'hésitez pas à aider.
 settings.language.helpUs.button = Traduire le client
 settings.chat.chatFormat = Format du chat
@@ -629,7 +631,7 @@ tournament.status.openForRegistration = Inscriptions ouvertes
 tournament.status.closedForRegistration = Inscriptions closes
 tournament.noStartingDate = Pas de date de début
 tournament.noCompletionDate = Pas de date de fin
-loading = Chargement...
+loading = Chargement…
 updater.readingFileList = Lecture de la liste des fichiers
 secondAgo = il y a {0,number,#} secondes
 vault.maps.searchError = Impossible de charger les cartes.
@@ -666,12 +668,12 @@ menu.revealGamePrefsFile = Afficher le fichier game.prefs
 ranked1v1.queuePopTimer = Recherche de partie dans {0,number,0}\:{1,number,00}
 game.create.generatedMap = Générer une nouvelle carte
 game.avgRating.format = {0,number,#}
-game.mapGeneration.notification.title = Génération de la carte...
+game.mapGeneration.notification.title = Génération de la carte…
 game.mapGeneration.notification.message = Veuillez patienter. (Version \: {0}, Seed \: {1})
 game.mapGeneration.failed.title = La génération de carte a échouée
 game.mapGeneration.failed.message = La carte demandée n'a pas pu être générée, le processus de génération de carte ne s'est pas terminé dans le délai imparti. Processus de fermeture.
 game.mapGeneration.downloadGenerator.title = Téléchargement du générateur de carte version {0}\n
-game.mapGeneration.generateMap.title = Génération de la carte... (Version \: {0})
+game.mapGeneration.generateMap.title = Génération de la carte… (Version \: {0})
 login.environment = Environnement
 login.button.downloadUpdate = Télécharger la dernière mise à jour
 login.button.downloadPreparing = Préparation du téléchargement
@@ -695,7 +697,7 @@ userInfo.foe = Ce joueur est votre ennemi
 userInfo.friend = Ce joueur est votre ami
 error.game.notTerminatedCorrectly = Le jeu ne s'est pas terminé correctement et certains fichiers sont toujours ouverts. Certains fichiers du jeu installé n'ont pas pu être copiés sur FAF mais à moins que vous n'ayez récemment modifié les fichiers du jeu dans la version installée, cela ne vous concerne probablement pas. Nous démarrons toujours le jeu pour vous.
 map.id = \#{0}
-mapGenerator.generationFailed = Une erreur est survenue durant la génération de la carte
+mapGenerator.generationFailed = Une erreur est survenue durant la génération de la carte.
 # Fuzzy
 revert.alreadySymlinked = Revert this I got it symlinked
 mapDir.changed.noneAscii = Nous avons détecté que votre nom d'utilisateur contient des caractères spéciaux et déplacé votre répertoire de ressources vers un emplacement de secours.
@@ -770,7 +772,7 @@ gamePath.select.noneChosen = Vous n'avez pas sélectionné le répertoire du jeu
 gamePath.select.noValidExe = Le répertoire sélectionné ne contient pas de Supreme Commander.exe valide et n'est donc pas une installation Forged Alliance valide.
 gamePath.select.vanillaGameSelected = Le répertoire sélectionné est celui du jeu de base, vous devez sélectionner l'extension Supreme Commander Forged Alliance.
 gamePath.select.fafDataSelected = Le répertoire sélectionné est le répertoire de données de jeu de Forged Alliance Forever, veuillez plutôt sélectionner le répertoire d'installation de Forged Alliance.
-gamePath.select.error = Une erreur est survenue durant la sélection du répertoire du jeu
+gamePath.select.error = Une erreur est survenue durant la sélection du répertoire du jeu.
 main.news = Actualités
 game.create.generatedMapNew = NOUVEAU
 game.create.defaultGameTypeMarker = (défaut)
@@ -783,6 +785,7 @@ startTab.wantToConfigure = Sélectionnez l'onglet pour commencer \:
 startTab.configure = Configurer
 vault.replays.onlyShowLastYear = L'an passé uniquement
 game.create.spawnCount = Nombre de points d'insertion
+# Fuzzy
 game.create.mapSize = Taille de la carte
 game.generate = Générer une nouvelle carte
 game.generate.recreate = Nom de la carte générée \:
@@ -811,11 +814,12 @@ modVault.modManager = Gérer les mods actifs
 modVault.manageMods = Gérer les mods actifs
 theme.needsRestart.message = La sélection du thème ''{0}'' peut nécessiter de redémarrer le client.
 theme.needsRestart.quit = Quitter
-vault.loading = Chargement...
+vault.loading = Chargement…
 vault.displayQuery = Afficher la requête
 vault.queryPrompt = Formez une requête à l'aide du panneau ci-dessus ou saisissez-la manuellement.
+# Fuzzy
 vault.searchError = Une erreur est survenue durant la recherche.
-vault.upload = Envoyer...
+vault.upload = Envoyer…
 replay.team = Equipe {0}
 replay.noTeam = Pas d'équipe
 search.perPage = Eléments par page
@@ -899,8 +903,8 @@ game.reasonNotValid.other = Autre
 game.valid = Partie classée
 exitWarning.title = Avertissement
 exitWarning.message = Forged Alliance est toujours en cours d'exécution, êtes-vous sûr de vouloir fermer le client ?
-chat.userContext.broadcast = Diffuser un message...
-corruptedModsError.notification = Une erreur inattendue a empêché le client de charger le mod suivant \: {0}
+chat.userContext.broadcast = Diffuser un message…
+corruptedModsError.notification = Une erreur inattendue a empêché le client de charger le mod suivant \: {0}.
 settings.data = Données et cache
 settings.data.gameDataCache.time = Validité des données de jeu en cache en jours
 settings.data.gameDataCache.time.description = Définit la durée pendant laquelle les fichiers de jeu sont gardés en cache. Régler sur une longue durée pour réduire les téléchargements. Régler sur une courte durée pour préserver l'espace disque.
@@ -993,7 +997,7 @@ teammatchmaking.notification.invite.title = Invité à rejoindre une équipe
 teammatchmaking.notification.invite.message = {0} vous a invité à rejoindre une équipe
 teammatchmaking.notification.invite.join = Rejoindre
 teammatchmaking.match.found = Partie trouvée \!
-teammatchmaking.match.starting = Lancement de la partie...
+teammatchmaking.match.starting = Lancement de la partie…
 teammatchmaking.match.cancelled = Partie annulée \!
 teammatchmaking.notification.matchFound.title = Partie trouvée
 teammatchmaking.notification.matchFound.message = Une partie a été trouvée et démarrera bientôt
@@ -1012,7 +1016,9 @@ teammatchmaking.queueTitle.inGame = Impossible de rejoindre une file d'attente q
 teammatchmaking.queueTitle.memberInGame = Impossible de rejoindre une file d'attente quand quelqu'un est en cours de partie
 teammatchmaking.queueTitle.inParty = Le chef d'équipe rejoint les files d'attente
 teammatchmaking.queueTitle.inQueue = Votre équipe est maintenant en file d'attente
+# Fuzzy
 teammatchmaking.queue.ladder1v1 = File d'attente 1c1
+# Fuzzy
 teammatchmaking.queue.tmm2v2 = File d'attente 2c2
 chat.groupChat.playerDisconnect = {0} s''est déconnecté
 chat.groupChat.playerConnect = {0} s''est connecté
@@ -1042,6 +1048,7 @@ teammatchmaking.chat.topic = Trouvez des partenaires et des conseils de jeu sur 
 getHelp = Obtenir de l'aide
 copyError = Copier l'erreur
 findHelp = Si cette erreur persiste, utilisez le bouton pour obtenir de l'aide et ouvrir le forum d'aide. Assurez-vous de vérifier la FAQ et les topics précédents. Si vous créez un nouveau topic, veuillez inclure les logs accessibles depuis le menu en haut à gauche du client.
+# Fuzzy
 game.crash = Supreme Commander\: Forged Alliance a crashé. Vérifiez le log {0} pour plus d''information.
 replayNotAvailable = Rediffusion {0,number,#} absente du serveur. Veuillez réessayer plus tard.
 close = Fermer
@@ -1114,3 +1121,45 @@ login.offlineServices.title = Certains services sont actuellement hors ligne
 login.offlineService.text = ''{0}'' est hors ligne depuis {1}. {2}.
 reasonUnknown = Raison inconnue
 temporalRange = De {0} à {1}
+login.playOffline = Jouer hors ligne
+offline.noExe = Jeu introuvable dans le répertoire de données de FAF. Connectez-vous et téléchargez les fichiers FAF nécessaires avant de pouvoir jouer hors ligne.
+offline.error = Une erreur est survenue durant le lancement du jeu.
+modVault.upload.readError = Une erreur est survenue durant la lecture du mod.
+modVault.upload.reading = Lecture du mod…
+mapVault.upload.readError = Une erreur est survenue durant la lecture de la carte.
+teammatchmaking.queue.tmm4v4FullShare = 4c4 Full Share
+teammatchmaking.queue.tmm4v4ShareUntilDeath = 4c4 No Share
+matchmaker.cancelled = Recherche de partie annulée par le serveur en l'absence de réponse des autres joueurs
+matchmaker.cancelled.title = Recherche de partie annulée
+vault.badSearch = Paramètre non valide dans la requête de recherche.\nErreur \: {0}\nRequête \: {1}
+modVault.installButtonFormat = Installer ({0})
+map.download.error = Erreur durant le téléchargement {0}
+map.load.noScenario = Le répertoire de carte ne contient pas de fichier *_scenario.lua {0}
+map.load.ioError = Impossible de lire la carte {0}
+map.load.luaError = La carte contient un LUA invalide {0}
+map.preview.generateError = Impossible de générer la prévisualisation de {0}
+map.directory.couldNotOpen = Impossible d'ouvrir le répertoire de cartes
+achievements.load.badUrl = Impossible de charger les succès en raison d''une mauvaise URL \: {0}
+replayServer.stopError = Impossible de fermer le server de rediffusion
+mod.load.ioError = Impossible de lire le mod {0}
+mod.load.luaError = Le mod contient un LUA invalide {0}
+map.load.noModInfo = Le mod ne contient pas de modInfo.lua {0}
+mod.upload.error = Impossible de lire le mod
+mod.errorUpdatingMods = Impossible de mettre à jour l'état des mods dans game.prefs
+tournament.viewNotLoaded = Impossible de charger la vue tournoi
+replay.live.startError = Impossible d'observer la partie en cours
+theme.webView.stylesheet.loadError = Impossible de charger la feuille de style Webview {0}
+theme.directory.readError = Impossible de lire le répertoire du thème {0}
+theme.webview.stylesheet.couldNotLoad = Impossible de lire la feuille de style Webview {0}
+theme.couldNotLoad = Impossible de charger les thèmes \: {0}
+theme.couldNotLoadImage = Impossible de charger l''image {0} du thème
+theme.couldNotWatch = Impossible de charger les changements du répertoire de thèmes
+theme.stylesheets.couldNotGet = Impossible de charger les feuilles de style de thème
+chat.message.addError = Impossible d'ajouter un message au chat
+game.files.binaryCopyError = Impossible de copier les fichiers programmes depuis {0} vers {1}
+game.files.updateError = Impossible de mettre à jour les fichiers programmes pour {0}
+uid.generate.error = Impossible de générer l'UID
+background.couldNotLoad = Impossible de charger le fond d''écran depuis {0}
+fxml.loadError = Impossible de charger la vue fxml pour {0}
+flag.loadError = Impossible de charger le flag pour {0}
+view.couldNotLoad = Impossible de charger la vue pour {0} 
